Updated html and css

--- a/travelRecommendation/travel_recommendation.html
+++ b/travelRecommendation/travel_recommendation.html
@@ -18,5 +18,12 @@
           <li><button id='btnClear'>Clear</button>
           </li>
         </ul>
-        </nav>
+    </nav>
+    
+    <div id="introduction">
+        <h2>EXPLORE <br> DREAM <br> DESTINATIONS</h2>
+        <p>It encourages exploration of unfamiliar territories, embracing diverse cultures and landscapes, while pursuing the desired destination that captivates the heart and ignites a sense of wonder.</p>
+        <button id="bookNow">BOOK NOW</button>
+    </div>
+        
 </body>
