Updated JS with fetch function

--- a/travelRecommendation/about_us.html
+++ b/travelRecommendation/about_us.html
@@ -28,11 +28,14 @@
     <div id="ourTeam">
         <h2>Our<br>Team</h2>
         <ul id="teamMember">
-            <li><h3>John Doe</h3><h4>John is responsible for...</h4></li>
-            <li><h3>John Doe</h3><h4>John is responsible for...</h4></li>
-            <li><h3>John Doe</h3><h4>John is responsible for...</h4></li>
+            <li id="member"><h3>John Doe</h3><h4>John is responsible for...</h4><button>CEO</button></li>
+            <li id="member"><h3>John Doe</h3><h4>John is responsible for...</h4><button>Team Lead</button></li>
+            <li id="member"><h3>John Doe</h3><h4>John is responsible for...</h4><button>Delivery Head</button></li>
         </ul>
 
     </div>
-        
+    <div>
+        <div id="result"></div>
+    </div>
+    <script src="./travel_recommendation.js"></script>      
 </body>
