--- a/travelRecommendation/contact_us.html
+++ b/travelRecommendation/contact_us.html
@@ -19,15 +19,23 @@
           </li>
         </ul>
     </nav>
-    
-    <div id="introduction">
-        <h2>EXPLORE <br> DREAM <br> DESTINATIONS</h2>
-        <p>It encourages exploration of unfamiliar territories, embracing diverse cultures and landscapes, while pursuing the desired destination that captivates the heart and ignites a sense of wonder.</p>
-        <button id="bookNow">BOOK NOW</button>
-    </div>
 
+    <div id="contactUs">
+        <h2>CONTACT US</h2>
+        <p>Get in touch.</p>
+    </div>
+    
+    <div id="contactUsForm">
+        <label for="name">Name</label>
+        <input type="text" id="name">
+        <label for="email">Email</label>
+        <input type="text" id="email">
+        <label for="message">Message</label>
+        <input type="text" id="message">
+        <button id="submit">Submit</button>
+    </div>
     <div>
         <div id="result"></div>
     </div>
-    <script src="./travel_recommendation.js"></script>    
+    <script src="./travel_recommendation.js"></script>      
 </body>
